# mytasks

./: LICENSE  README.md  app.py  models.py  pyproject.toml  requirements.txt  routes.py
instance/: tasks.db
static/: tasks.css
templates/: index.html  index.plain.html  task_list.html
tests/: test_app.py
